[gd_scene load_steps=2 format=3 uid="uid://yoex8hkg1gtq"]

[ext_resource type="Script" path="res://scenes/main/menu_scene/settings_menu/settings_menu.gd" id="1_defdn"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_defdn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Categories" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Graphics" type="Control" parent="MarginContainer/Categories"]
custom_minimum_size = Vector2(0, 154)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Categories/Graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Panel" type="Panel" parent="MarginContainer/Categories/Graphics/VBoxContainer"]
custom_minimum_size = Vector2(492, 40)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Categories/Graphics/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Graphics"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/Categories/Graphics/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Filter" type="Panel" parent="MarginContainer/Categories/Graphics/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/Categories/Graphics/VBoxContainer/GridContainer/Filter"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2
text = "Filter"

[node name="FilterSelect" type="OptionButton" parent="MarginContainer/Categories/Graphics/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "Nearest"
popup/item_1/text = "Linear"
popup/item_1/id = 1

[node name="Scaling" type="Panel" parent="MarginContainer/Categories/Graphics/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/Categories/Graphics/VBoxContainer/GridContainer/Scaling"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2
text = "Scaling Mode"

[node name="ScalingSelect" type="OptionButton" parent="MarginContainer/Categories/Graphics/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 1
item_count = 2
popup/item_0/text = "Floating Point"
popup/item_1/text = "Integer"
popup/item_1/id = 1

[node name="Scale" type="Panel" parent="MarginContainer/Categories/Graphics/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/Categories/Graphics/VBoxContainer/GridContainer/Scale"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2
text = "Scale
"

[node name="ScaleSelect" type="SpinBox" parent="MarginContainer/Categories/Graphics/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 2.0

[node name="Sound" type="Control" parent="MarginContainer/Categories"]
custom_minimum_size = Vector2(0, 154)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Categories/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Panel" type="Panel" parent="MarginContainer/Categories/Sound/VBoxContainer"]
custom_minimum_size = Vector2(492, 40)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Categories/Sound/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Audio"

[node name="Controls" type="Control" parent="MarginContainer/Categories"]
custom_minimum_size = Vector2(0, 154)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Categories/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Panel" type="Panel" parent="MarginContainer/Categories/Controls/VBoxContainer"]
custom_minimum_size = Vector2(492, 40)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Categories/Controls/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Controls"

[node name="BackToMenu" type="Button" parent="MarginContainer/Categories"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MarginContainer/Categories/BackToMenu" to="." method="_on_back_to_menu_pressed"]
